@@ -71,6 +71,7 @@ elseif string.sub(source, 1, 10)=="esahubble:" then obj=InitESAHubble()
 elseif string.sub(source, 1, 13)=="wallpapers13:" then obj=InitWallpapers13()
 elseif string.sub(source, 1, 14)=="getwallpapers:" then obj=InitGetWallpapers()
 elseif string.sub(source, 1, 14)=="hipwallpapers:" then obj=InitHipWallpaper()
+elseif string.sub(source, 1, 16)=="wallpaperscraft:" then obj=InitWallpapersCraft()
 elseif string.sub(source, 1, 10)=="wikimedia:" then obj=InitWikimedia()
 elseif string.sub(source, 1, 8)=="suwalls:" then obj=InitSUWalls()
 elseif string.sub(source, 1, 9)=="hdqwalls:" then obj=InitHDQWalls()
